...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Donador" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z26-9i-d0S">
                                <rect key="frame" x="97" y="217" width="76" height="24"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                <color key="backgroundColor" red="0.046492169649999998" green="0.65193145809999997" blue="0.54139779320000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <color key="tintColor" systemColor="systemBackgroundColor"/>
                                                <state key="normal" title="Verificar mercancía"/>
                                                <connections>
                                                    <segue destination="iHe-rf-Qbv" kind="show" identifier="verificarMercancia" id="QqQ-sv-BHd"/>
...
                                        <color key="backgroundColor" red="0.046492169649999998" green="0.65193145809999997" blue="0.54139779320000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <color key="tintColor" systemColor="systemBackgroundColor"/>
                                        <state key="normal" title="Home Banco"/>
                                        <connections>
                                            <segue destination="hV3-1r-ZKX" kind="popoverPresentation" popoverAnchorView="buS-7o-yCq" id="Zva-zX-feE">
...
                                        <rect key="frame" x="0.0" y="182" width="414" height="57"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UPC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G1B-8K-u6H" userLabel="upc_label">
                                                <rect key="frame" x="50" y="21.5" width="42" height="14"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        <rect key="frame" x="0.0" y="354" width="414" height="57.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cantidad supuesta" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uz6-pf-Fpm" userLabel="cantSup_labe
                                                <rect key="frame" x="50" y="21.5" width="165.5" height="14.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        <rect key="frame" x="0.0" y="411.5" width="414" height="57.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cantidad recibida" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IvR-Yd-omF" userLabel="cantRec_labe
                                                <rect key="frame" x="50" y="21.5" width="165.5" height="14.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
